Default files, setting up bower and composer

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,13 @@
       "name": "author's name",
       "email": "email@example.com"
     }
-  ]
+  ],
+  "require": {
+    "zendframework/zendframework": "^2.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "Application\\": "module/Application/src/"
+    }
+  }
 }
