--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /composer.phar
+/public/assets/vendor
+
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
