--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 
 *.iml
 
+/node_modules
+/composer.lock
 ## Directory-based project format:
 .idea/
 # if you remove the above rule, at least ignore the following:
