--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,6 @@
   ],
   "dependencies": {
     "font-awesome": ">=4.5.0",
-    "bootstrap": ">=3.0.0",
-    "react": "^0.14.7"
+    "bootstrap": ">=3.0.0"
   }
 }
