--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Application\\": "module/Application/src/"
+      "Application\\": "module/Application/src/",
+      "Redis\\": "module/Redis/src/"
     }
   }
 }
