Moving out tutorial. Adding weather icons

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   ],
   "dependencies": {
     "font-awesome": ">=4.5.0",
-    "bootstrap": ">=3.0.0"
+    "bootstrap": ">=3.0.0",
+    "erikflowers/weather-icons": "^2.0.10"
   }
 }
