--- a/config/autoload/openweathermap.local.php.dist
+++ b/config/autoload/openweathermap.local.php.dist
@@ -6,8 +6,14 @@
  */
 
 return [
-	'openWeatherMap' => [
-		'cityId' => '',
-		'apiKey' => ''
-	]
+    'weather' => [
+        'openWeatherMap' => [
+            'weatherUrl'    => 'http://api.openweathermap.org/data/2.5/weather',
+            'forecastUrl'   => 'http://api.openweathermap.org/data/2.5/forecast',
+            'units' => '',
+            'cityId'        => '',
+            'apiKey'        => '',
+            'clientOptions' => [],
+        ],
+    ],
 ];
