--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /vendor
 /composer.lock
 ## Directory-based project format:
+/config/autoload/*local.php
 .idea/
 # if you remove the above rule, at least ignore the following:
 
